Solo para formatear vista

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # Libraries Version
 ODOO_VERSION=12.0
 PSQL_VERSION=11
+#ODOO_SOURCE=odoo/odoo
+ODOO_SOURCE=OCA/OCB
 WKHTMLTOX_VERSION=
 WKHTMLTOPDF_CHECKSUM=
 NODE_VERSION=
@@ -17,7 +19,8 @@ ODOO_LOGS_DIR=/var/lib/odoo/logs
 ODOO_RC=/etc/odoo/odoo.conf
 
 # Odoo Configuration file defaults
-ADMIN_PASSWORD=my-weak-password
+#ADMIN_PASSWORD=my-weak-password
+ADMIN_PASSWORD=sisboca01
 ODOO_DATA_DIR=/var/lib/odoo/data
 DB_PORT_5432_TCP_ADDR=db
 DB_MAXCONN=64
@@ -37,7 +40,7 @@ LIMIT_TIME_REAL_CRON=300
 LIST_DB=True
 LOG_DB=False
 LOG_DB_LEVEL=warning
-LOG_HANDLER=:INFO
+#jafr LOG_HANDLER=:INFO
 LOG_LEVEL=info
 MAX_CRON_THREADS=2
 PROXY_MODE=False
