--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -1,2 +1,37 @@
+
 [options]
-data_dir = ${DATA_DIR}
+admin_passwd=sisboca01
+data_dir = /var/lib/odoo/data
+db_host = db
+db_maxconn = 64
+db_password = odoo
+db_port = 5432
+db_sslmode = prefer
+db_template = template1
+db_user = odoo
+dbfilter = .*
+http_interface = 0.0.0.0
+http_port = 8069
+limit_memory_hard = 2684354560
+limit_memory_soft = 2147483648
+limit_time_cpu = 600
+limit_time_real = 1200
+limit_time_real_cron = 300
+list_db = True
+log_db = False
+log_db_level = warning
+log_handler = :INFO
+log_level = info
+max_cron_threads = 2
+proxy_mode = False
+server_wide_modules = base,web
+smtp_password = False
+smtp_port = 25
+smtp_server = localhost
+smtp_ssl = False
+smtp_user = False
+test_enable = False
+unaccent = False
+without_demo = True
+workers = 0
+addons_path = /opt/odoo/addons,/mnt/addons/OCA/account-analytic,/mnt/addons/OCA/account-budgeting,/mnt/addons/OCA/account-closing,/mnt/addons/OCA/account-financial-reporting,/mnt/addons/OCA/account-financial-tools,/mnt/addons/OCA/account-fiscal-rule,/mnt/addons/OCA/account-invoice-reporting,/mnt/addons/OCA/account-invoicing,/mnt/addons/OCA/account-payment,/mnt/addons/OCA/account-reconcile,/mnt/addons/OCA/bank-payment,/mnt/addons/OCA/crm,/mnt/addons/OCA/field-service,/mnt/addons/OCA/hr,/mnt/addons/OCA/manufacture-reporting,/mnt/addons/OCA/partner-contact,/mnt/addons/OCA/project,/mnt/addons/OCA/purchase-reporting,/mnt/addons/OCA/report-print-send,/mnt/addons/OCA/reporting-engine,/mnt/addons/OCA/sale-reporting,/mnt/addons/OCA/server-auth,/mnt/addons/OCA/server-brand,/mnt/addons/OCA/server-tools,/mnt/addons/OCA/server-ux,/mnt/addons/OCA/social,/mnt/addons/OCA/stock-logistics-reporting,/mnt/addons/OCA/timesheet,/mnt/addons/OCA/web,/mnt/addons/OCA/website,/mnt/addons/aeroo/aeroo_reports,/mnt/addons/ingadhoc/account-financial-tools,/mnt/addons/ingadhoc/account-payment,/mnt/addons/ingadhoc/miscellaneous,/mnt/addons/odoo-dominicana/l10n-dominicana,/mnt/addons/openeducat_erp,/mnt/addons/openworx/backend_theme,/mnt/addons/sisboca
