--- a/dev-hosted.yml
+++ b/dev-hosted.yml
@@ -13,13 +13,13 @@ services:
   odoo:
     # Uncomment the next lines to build the image. This is mainly useful
     # when you need to add additional requirements on the building phase
-    #build:
-    #  context: .
-    #  dockerfile: Dockerfile
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       # Host paths (odoo src code & .vscode conf)
       - ./src/odoo:/${ODOO_BASEPATH}
-      - ./config:/etc/odoo:ro
+      - ./config:/etc/odoo
       - ./.devcontainer/.vscode:/etc/.vscode
     environment:
       - LOG_LEVEL=debug
