--- a/dev-standalone.yml
+++ b/dev-standalone.yml
@@ -13,11 +13,12 @@ services:
   odoo:
     # Uncomment the next lines to build the image. This is mainly useful
     # when you need to add additional requirements on the building phase
-    #build:
-    #  context: .
-    #  dockerfile: Dockerfile
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       # Host paths (.vscode configuration)
+      - ./src/odoo:/${ODOO_BASEPATH}
       - ./.devcontainer/.vscode:/etc/.vscode
     environment:
       - LOG_LEVEL=debug
