--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
   db:
     image: postgres:${PSQL_VERSION}
     restart: unless-stopped
+    stop_grace_period: 120s
+    ports: ["5432:5432"]
     volumes:
       - psql:/var/lib/postgresql/data/pgdata
     environment:
