--- a/hosted.yml
+++ b/hosted.yml
@@ -19,7 +19,7 @@ services:
     volumes:
       # Host paths (odoo src code & .vscode conf)
       - ./src/odoo:/${ODOO_BASEPATH}
-      - ./config:/etc/odoo:ro
+      - ./config:/etc/odoo
     environment:
       - WDB_SOCKET_SERVER=wdb
       - WDB_NO_BROWSER_AUTO_OPEN=True
