Solo para formatear vista

--- a/.env
+++ b/.env
@@ -34,9 +34,11 @@ HTTP_INTERFACE=0.0.0.0
 HTTP_PORT=8069
 LIMIT_MEMORY_HARD=2684354560
 LIMIT_MEMORY_SOFT=2147483648
+# si da error limite memoria virtual LIMIT_MEMORY_SOFT=313651200
 LIMIT_TIME_CPU=600
 LIMIT_TIME_REAL=1200
 LIMIT_TIME_REAL_CRON=300
+#LIMIT_REQUEST=5196
 LIST_DB=True
 LOG_DB=False
 LOG_DB_LEVEL=warning
